Revamped site's common scripts, Many pages slightly broken Update commons.yml, excel-password-remover.yml, and 31 more files...

--- a/templates/applets/excel-password-remover.jinja
+++ b/templates/applets/excel-password-remover.jinja
@@ -1,22 +1,35 @@
 <section id="{{ applet_data.id }}-eula">
-    {{ render_h2(l10n("eula.long", "commons", user_lang)) }}
+    {{ render_h2(l10n("disclaimer.warning", "commons", user_lang)) }}
     {{ render_paragraph(l10n("eula.1", applet_data.id, user_lang)) }}
     {{ render_paragraph(l10n("eula.2", applet_data.id, user_lang)) }}
     {{ render_paragraph(l10n("eula.3", applet_data.id, user_lang)) }}
-    {{ render_paragraph(l10n("eula.4", applet_data.id, user_lang)) }}
 </section>
 
 <section id="{{ applet_data.id }}-input">
     {{ render_h2(l10n("file.selection.title", applet_data.id, user_lang)) }}
-    <p>123</p>
+
+    {{ render_paragraph(l10n("file.selection.1", applet_data.id, user_lang)) }}
+
+    {{ render_file_input(applet_data.id + "-input-file", true, ".xlsx, .xlsm", true, true) }}
+
+    <div id="{{ applet_data.id }}-errors">
+        <div class="bkgd-red t-bold t-center w-full r-l border p-xs">
+            ⚠️ These styles require a special workaround to work properly ⚠️
+        </div>
+    </div>
 </section>
 
 <section id="{{ applet_data.id }}-details">
     {{ render_h2(l10n("details.title", applet_data.id, user_lang)) }}
-    <p>123</p>
+
+    <div id="{{ applet_data.id }}-details-empty">
+        {{ render_paragraph(l10n("details.empty.1", applet_data.id, user_lang)) }}
+    </div>
 </section>
 
-<section id="{{ applet_data.id }}-licenses">
-    {{ render_h2(l10n("licenses.title", applet_data.id, user_lang)) }}
-    <p>123</p>
-</section>
+{% if is_standalone %}
+    <section id="{{ applet_data.id }}-licenses">
+        {{ render_h2(l10n("licenses.title", applet_data.id, user_lang)) }}
+        <p>123</p>
+    </section>
+{% endif %}
