--- a/templates/pages/contact.jinja
+++ b/templates/pages/contact.jinja
@@ -28,3 +28,7 @@
 	</p>
 
 {% endblock %}
+
+{% block extra_scripts %}
+    <script src="{{ url_for("static", filename="resources/NibblePoker/js/nibblepoker-default.min.js") }}"></script>
+{% endblock %}
