--- a/templates/pages/privacy.jinja
+++ b/templates/pages/privacy.jinja
@@ -179,3 +179,7 @@
         '<span class="ml-s">(' + l10n('french', "langs", user_lang) + ')</span>' ) }}
 
 {% endblock %}
+
+{% block extra_scripts %}
+    <script src="{{ url_for("static", filename="resources/NibblePoker/js/nibblepoker-default.min.js") }}"></script>
+{% endblock %}
