--- a/templates/pages/root.jinja
+++ b/templates/pages/root.jinja
@@ -52,3 +52,7 @@
     ]) }}
 
 {% endblock %}
+
+{% block extra_scripts %}
+    <script src="{{ url_for("static", filename="resources/NibblePoker/js/nibblepoker-default.min.js") }}"></script>
+{% endblock %}
