--- a/templates/pages/about.jinja
+++ b/templates/pages/about.jinja
@@ -97,3 +97,7 @@
 		{{ l10n("financing.text.isp", "about", user_lang) }}
 	</p>
 {% endblock %}
+
+{% block extra_scripts %}
+    <script src="{{ url_for("static", filename="resources/NibblePoker/js/nibblepoker-default.min.js") }}"></script>
+{% endblock %}
