--- a/templates/pages/debug.jinja
+++ b/templates/pages/debug.jinja
@@ -119,3 +119,7 @@
 	</div>
 
 {% endblock %}
+
+{% block extra_scripts %}
+    <script src="{{ url_for("static", filename="resources/NibblePoker/js/nibblepoker-default.min.js") }}"></script>
+{% endblock %}
