--- a/templates/pages/project_index.jinja
+++ b/templates/pages/project_index.jinja
@@ -38,3 +38,7 @@
 
     {% endfor %}
 {% endblock %}
+
+{% block extra_scripts %}
+    <script src="{{ url_for("static", filename="resources/NibblePoker/js/nibblepoker-default.min.js") }}"></script>
+{% endblock %}
