--- a/templates/elements/file-input.jinja
+++ b/templates/elements/file-input.jinja
@@ -1,7 +1,8 @@
 <div class="np-file-input-root-container">
+    <!-- FIXME: Use the common renderer ! -->
     {% if file_upload_button %}
         <button id="{{ file_input_id }}-add" class="p-xs r-s border btn-primary">
-            <i class="fa-duotone fa-solid fa-cloud-arrow-up mr-xs"></i>
+            <i class="fa-duotone fa-solid fa-cloud-arrow-up mr-xxs"></i>
             {% if file_multiple %}
                 {{ l10n("file.drop.upload.multiple", "commons", user_lang) }}
             {% else %}
@@ -12,7 +13,7 @@
 
     {% if file_clear_button %}
         <button id="{{ file_input_id }}-reset" class="p-xs r-s border btn-warning">
-            {{ l10n("file.drop.clear", "commons", user_lang) }}
+            {{ "<i class=\"fa-duotone fa-solid fa-trash mr-xs\"></i>" + l10n("file.drop.clear", "commons", user_lang) }}
         </button>
     {% endif %}
 
