Finished Excel Password Remover, Added downloading functionality Update excel-password-remover.css, excel-password-remover.mjs, and excel-password-remover.jinja

--- a/templates/applets/excel-password-remover.jinja
+++ b/templates/applets/excel-password-remover.jinja
@@ -35,7 +35,7 @@
 </section>
 
 <template id="tmpl-success-root">
-    <div class="bkgd-grid10 w-full r-l border">
+    <div class="bkgd-grid10 w-full r-l border cursor-pointer">
         <table class="table-p-xxs table-v-center">
             <tr>
                 <td rowspan="2" class="br bkgd-green bkgd-grid30 rl-l">
