Cleaned-up dependencies, Cleaned-up project and tool indexes Update app.py, readme.md, and 4 more files...

--- a/templates/pages/_content_index.jinja
+++ b/templates/pages/_content_index.jinja
@@ -2,6 +2,6 @@
 
 {% block main_content %}
     {% block content_filters %}{% endblock %}
-    <hr class="subtle">
+    <!--<hr class="subtle">-->
     {% block content_listing %}{% endblock %}
 {% endblock %}
