--- a/templates/pages/tools_index.jinja
+++ b/templates/pages/tools_index.jinja
@@ -15,7 +15,10 @@
 {% block content_listing %}
 
     {% for tool_id, tool_data in get_tools().items() %}
-        <div class="p-s border r-m">
+        <hr class="subtle">
+
+        <!--<div class="p-s border r-m">-->
+        <div class="p-xs r-m">
             <a href="{{ l10n_url_abs('/tools/' + tool_id, raw_lang) }}" class="a-hidden">
                 <div class="content-search-entry">
                     <img class="content-search-image mr-s r-l"
