Finished IBAN generator mockup and base page, Updated UUID generator to use shared strings Update commons.yml, countries.yml, and 10 more files...

--- a/templates/applets/uuid-generator.jinja
+++ b/templates/applets/uuid-generator.jinja
@@ -22,23 +22,23 @@
 <hr class="subtle">
 
 <button id="uuid-generator-generate" class="p-xs r-s border b-light success">
-    <i class="fa-duotone fa-solid fa-gears mr-xs"></i>{{ l10n("generate", "uuid-generator", user_lang) }}
+    <i class="fa-duotone fa-solid fa-gears mr-xs"></i>{{ l10n("action.generate", "commons", user_lang) }}
 </button>
 
 <button class="p-xs r-s border b-light primary rr-0 br-0">
     <i class="fa-duotone fa-solid fa-download"></i>
 </button>
 <button id="uuid-generator-download-raw" class="p-xs r-s border b-light primary ml-0 r-0 br-0">
-    {{ l10n("download.raw", "uuid-generator", user_lang) }}
+    {{ l10n("format.raw", "commons", user_lang) }}
 </button>
 <button id="uuid-generator-download-json" class="p-xs r-s border b-light primary ml-0 r-0 br-0">
-    {{ l10n("download.json", "uuid-generator", user_lang) }}
+    {{ l10n("format.json", "commons", user_lang) }}
 </button>
 <button id="uuid-generator-download-yaml" class="p-xs r-s border b-light primary ml-0 rl-0">
-    {{ l10n("download.yaml", "uuid-generator", user_lang) }}
+    {{ l10n("format.yaml", "commons", user_lang) }}
 </button>
 
 <hr class="subtle">
 
 <label for="uuid-generator-preview" class="d-none">{{ l10n("preview.label", "uuid-generator", user_lang) }}:</label>
-<textarea name="uuid-generator-preview" id="uuid-generator-preview" rows="16" class="w-full border r-s"></textarea>
+<textarea name="uuid-generator-preview" id="uuid-generator-preview" rows="16" class="w-full border r-s ta-resize-v"></textarea>
