Finished IBAN generator base functionalities, Advanced features still missing Update iban-generator.yml, iban-generator.yml, and 3 more files...

--- a/templates/applets/iban-generator.jinja
+++ b/templates/applets/iban-generator.jinja
@@ -120,6 +120,11 @@
 <label for="iban-generator-option-pretty" class="mr-xxs">{{ l10n("option.human.readable", "iban-generator", user_lang) }}:</label>
 <input id="iban-generator-option-pretty" class="r-m border" type="checkbox" checked>
 
+<br>
+
+<label for="iban-generator-option-prefer-numbers" class="mr-xxs">{{ l10n("option.prefer.numbers", "iban-generator", user_lang) }}:</label>
+<input id="iban-generator-option-prefer-numbers" class="r-m border" type="checkbox">
+
 
 <hr class="subtle">
 
