--- a/static/resources/NibblePoker/css/extra.css
+++ b/static/resources/NibblePoker/css/extra.css
@@ -1,3 +1,4 @@
+/* File inputs with drop thingy */
 .np-file-input-drop-container {
     position: relative;
 }
@@ -12,4 +13,35 @@
 input[type=file].np-file-input-drop {
     opacity: 0;
     cursor: pointer;
+}
+
+/* Nicer checkboxes, move to CSS 8 */
+input[type=checkbox] {
+    text-align: center;
+    padding: 0;
+
+    &:before {
+        content: "✘";
+    }
+
+    &:checked {
+        &:before {
+            content: "✔";
+        }
+    }
+}
+
+/* Top margin trimmer for heading renderer */
+
+
+/* Copy of the m*-xs classes */
+/* Accommodates the paragraph renderer that has a hard-coded .mt-xs */
+.content-spacer {
+    margin: calc(1rem* 0.5);
+    /*margin-bottom: 0;*/
+}
+
+.content-spacer-vertical {
+    margin-top: calc(1rem* 0.5);
+    margin-bottom: calc(1rem* 0.5);
 }
