--- a/templates/projects/lscom-cli-dotnet.jinja
+++ b/templates/projects/lscom-cli-dotnet.jinja
@@ -1,169 +1,209 @@
 {% extends "projects/_project.jinja" %}
 
 {% block project_content %}
-    {{ render_h2(l10n("intro.title", project_id, user_lang)) }}
-    {{ render_paragraph(l10n("intro.p1", project_id, user_lang)) }}
-    {{ render_paragraph(l10n("intro.p2", project_id, user_lang)) }}
-    {{ render_paragraph(l10n("intro.p3", project_id, user_lang)) }}
+    <section>
+        {{ render_h2(l10n("intro.title", project_id, user_lang)) }}
+        <div class="content-spacer">
+            {{ render_paragraph(l10n("intro.p1", project_id, user_lang)) }}
+            {{ render_paragraph(l10n("intro.p2", project_id, user_lang)) }}
+            {{ render_paragraph(l10n("intro.p3", project_id, user_lang)) }}
+        </div>
+    </section>
 
-    {{ render_h2(l10n("requirements.title", project_id, user_lang)) }}
-    {{ render_list_ul([
-        l10n("requirements.1", project_id, user_lang),
-        [
-            l10n("requirements.2", project_id, user_lang),
-        ],
-        l10n("requirements.3", project_id, user_lang),
-        [
-            l10n("requirements.4", project_id, user_lang),
-        ],
-    ]) }}
+        <section>
+        {{ render_h2(l10n("requirements.title", project_id, user_lang)) }}
+        <div class="content-spacer">
+            {{ render_list_ul([
+                l10n("requirements.1", project_id, user_lang),
+                [
+                    l10n("requirements.2", project_id, user_lang),
+                ],
+                l10n("requirements.3", project_id, user_lang),
+                [
+                    l10n("requirements.4", project_id, user_lang),
+                ],
+            ]) }}
+        </div>
+    </section>
 
-    {{ render_h2(l10n("improvements.title", project_id, user_lang)) }}
-    {{ render_list_ul([
-        l10n("improvements.1", project_id, user_lang),
-        l10n("improvements.2", project_id, user_lang),
-        l10n("improvements.3", project_id, user_lang),
-        l10n("improvements.4", project_id, user_lang),
-        l10n("improvements.5", project_id, user_lang),
-    ]) }}
+    <section>
+        {{ render_h2(l10n("improvements.title", project_id, user_lang)) }}
+        <div class="content-spacer">
+            {{ render_list_ul([
+                l10n("improvements.1", project_id, user_lang),
+                l10n("improvements.2", project_id, user_lang),
+                l10n("improvements.3", project_id, user_lang),
+                l10n("improvements.4", project_id, user_lang),
+                l10n("improvements.5", project_id, user_lang),
+            ]) }}
+        </div>
+    </section>
 
-    {{ render_h2(l10n("screenshots.title", project_id, user_lang)) }}
-    {{ render_splide([
-        '<img src="' + url_for("static", filename="/resources/NibblePoker/images/content/lscom/screen-cli-stylish-2x-xBR.png") + '">',
-        '<img src="' + url_for("static", filename="/resources/NibblePoker/images/content/lscom/screen-cli-csv-2x-xBR.png") + '">',
-        '<img src="' + url_for("static", filename="/resources/NibblePoker/images/content/lscom/screen-cli-full-2x-xBR.png") + '">',
-    ]) }}
+    <section>
+        {{ render_h2(l10n("screenshots.title", project_id, user_lang)) }}
+        <div class="content-spacer">
+            {{ render_splide([
+                '<img src="' + url_for("static", filename="/resources/NibblePoker/images/content/lscom/screen-cli-stylish-2x-xBR.png") + '">',
+                '<img src="' + url_for("static", filename="/resources/NibblePoker/images/content/lscom/screen-cli-csv-2x-xBR.png") + '">',
+                '<img src="' + url_for("static", filename="/resources/NibblePoker/images/content/lscom/screen-cli-full-2x-xBR.png") + '">',
+            ]) }}
+        </div>
+    </section>
 
-    {{ render_h2(l10n("usage.title", project_id, user_lang)) }}
-    {{
-    render_code_block([
-        "lscom.exe [-a|--show-all] [-d|--show-device] [-D <str>|--divider <str>] [-f|--show-friendly]",
-        "          [-h|--help] [-H|--short-help] [-n|--show-name-raw] [-P|--no-pretty] [-s|--sort]",
-        "          [-S|--sort-reverse] [-t|--tab-padding] [-v|--version] [-V|--version-only]",
-        "",
-        "Launch arguments:",
-        " -a, --show-all             Display the complete port's name (Equal to '-dfn')",
-        " -d, --show-device          Displays the port's device name",
-        " -D <str>, --divider <str>  Uses the given string or char as a separator (Can be empty string !)",
-        " -f, --show-friendly        Displays the port's friendly name",
-        " -h, --help                 Display this help text",
-        " -H, --short-help           Display the short help text",
-        " -n, --show-name-raw        Displays the port's raw name (See remarks section)",
-        " -P, --no-pretty            Disables the pretty printing format (Equal to -D \" \")",
-        " -s, --sort                 Sorts the port based on their raw names in an ascending order",
-        " -S, --sort-reverse         Sorts the port based on their raw names in a descending order",
-        " -t, --tab-padding          Use tabs for padding between the types of names (Overrides '-D')",
-        " -v, --version              Shows the utility's version number and other info",
-        " -V, --version-only         Shows the utility's version number only (Overrides '-v')"
-    ], None)
-    }}
+    <section>
+        {{ render_h2(l10n("usage.title", project_id, user_lang)) }}
+        <div class="content-spacer">
+            {{
+            render_code_block([
+                "lscom.exe [-a|--show-all] [-d|--show-device] [-D <str>|--divider <str>] [-f|--show-friendly]",
+                "          [-h|--help] [-H|--short-help] [-n|--show-name-raw] [-P|--no-pretty] [-s|--sort]",
+                "          [-S|--sort-reverse] [-t|--tab-padding] [-v|--version] [-V|--version-only]",
+                "",
+                "Launch arguments:",
+                " -a, --show-all             Display the complete port's name (Equal to '-dfn')",
+                " -d, --show-device          Displays the port's device name",
+                " -D <str>, --divider <str>  Uses the given string or char as a separator (Can be empty string !)",
+                " -f, --show-friendly        Displays the port's friendly name",
+                " -h, --help                 Display this help text",
+                " -H, --short-help           Display the short help text",
+                " -n, --show-name-raw        Displays the port's raw name (See remarks section)",
+                " -P, --no-pretty            Disables the pretty printing format (Equal to -D \" \")",
+                " -s, --sort                 Sorts the port based on their raw names in an ascending order",
+                " -S, --sort-reverse         Sorts the port based on their raw names in a descending order",
+                " -t, --tab-padding          Use tabs for padding between the types of names (Overrides '-D')",
+                " -v, --version              Shows the utility's version number and other info",
+                " -V, --version-only         Shows the utility's version number only (Overrides '-v')"
+            ], None)
+            }}
+        </div>
+    </section>
 
-    {{ render_h2(l10n("formatting.title", project_id, user_lang)) }}
-    {{
-    render_code_block([
-        " *┬> No launch arguments:",
-        "  └──> ${Raw name}      => COM1",
-        " *┬> '-d' or '-f'",
-        "  ├──> ${Device name}   => \\Device\\Serial1",
-        "  └──> ${Friendly name} => Communications Port",
-        " *┬> '-d' and '-f'",
-        "  └──> ${Friendly name} [${Device name}]        => Communications Port [\\Device\\Serial1]",
-        " *┬> '-n' and '-d'",
-        "  └──> ${Raw name} [$DeviceName]        => COM1 [\\Device\\Serial1]",
-        " *┬> '-n' and '-f'",
-        "  └──> ${Raw name} - ${Friendly name}   => COM1 - Communications Port",
-        " *┬> '-ndf' or '-a'",
-        "  └──> ${Raw name} - ${Friendly name} [${Device name}]  => COM1 - Communications Port [\\Device\\Serial1]",
-        " *┬> '-ndfp' or '-ap'",
-        "  └──> ${Raw name} ${Friendly name} ${Device name}      => COM1 Communications Port \\Device\\Serial1",
-        " *┬> '-ndfD \";\"' or '-aD \";\"'",
-        "  └──> ${Raw name};${Friendly name};${Device name}      => COM1;Communications Port;\\Device\\Serial1"
-    ], None)
-    }}
+    <section>
+        {{ render_h2(l10n("formatting.title", project_id, user_lang)) }}
+        <div class="content-spacer">
+            {{
+            render_code_block([
+                " *┬> No launch arguments:",
+                "  └──> ${Raw name}      => COM1",
+                " *┬> '-d' or '-f'",
+                "  ├──> ${Device name}   => \\Device\\Serial1",
+                "  └──> ${Friendly name} => Communications Port",
+                " *┬> '-d' and '-f'",
+                "  └──> ${Friendly name} [${Device name}]        => Communications Port [\\Device\\Serial1]",
+                " *┬> '-n' and '-d'",
+                "  └──> ${Raw name} [$DeviceName]        => COM1 [\\Device\\Serial1]",
+                " *┬> '-n' and '-f'",
+                "  └──> ${Raw name} - ${Friendly name}   => COM1 - Communications Port",
+                " *┬> '-ndf' or '-a'",
+                "  └──> ${Raw name} - ${Friendly name} [${Device name}]  => COM1 - Communications Port [\\Device\\Serial1]",
+                " *┬> '-ndfp' or '-ap'",
+                "  └──> ${Raw name} ${Friendly name} ${Device name}      => COM1 Communications Port \\Device\\Serial1",
+                " *┬> '-ndfD \";\"' or '-aD \";\"'",
+                "  └──> ${Raw name};${Friendly name};${Device name}      => COM1;Communications Port;\\Device\\Serial1"
+            ], None)
+            }}
+        </div>
+    </section>
 
-    {{ render_h2(l10n("packages.title", project_id, user_lang)) }}
-    {{ render_paragraph(l10n("packages.single.title", project_id, user_lang)) }}
-    {{ render_paragraph(l10n("packages.single.1", project_id, user_lang)) }}
-    {{ render_paragraph(l10n("packages.self.title", project_id, user_lang)) }}
-    {{ render_paragraph(l10n("packages.self.1", project_id, user_lang)) }}
-    {{ render_paragraph(l10n("packages.msi.title", project_id, user_lang)) }}
-    {{ render_paragraph(l10n("packages.msi.1", project_id, user_lang)) }}
+    <section>
+        {{ render_h2(l10n("packages.title", project_id, user_lang)) }}
+        <div class="content-spacer">
+            {{ render_paragraph(l10n("packages.single.title", project_id, user_lang)) }}
+            {{ render_paragraph(l10n("packages.single.1", project_id, user_lang)) }}
+            {{ render_paragraph(l10n("packages.self.title", project_id, user_lang)) }}
+            {{ render_paragraph(l10n("packages.self.1", project_id, user_lang)) }}
+            {{ render_paragraph(l10n("packages.msi.title", project_id, user_lang)) }}
+            {{ render_paragraph(l10n("packages.msi.1", project_id, user_lang)) }}
+        </div>
+    </section>
 
-    {{ render_h2(l10n("version.current", "commons", user_lang)) }}
-    <table class="table-stylish table-p-s border r-l">
-        <thead>
-            <tr>
-                <th>{{ l10n("cpu.architecture", "commons", user_lang) }}</th>
-                <th>{{ l10n("requirements", "commons", user_lang) }}</th>
-                <th>{{ l10n("download.multiple", "commons", user_lang) }}</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>{{ l10n("cpu.any", "commons", user_lang) }}</td>
-                <td>{{ l10n("requirements.text.dotnet", project_id, user_lang) }}</td>
-                <td>...</td>
-            </tr>
-            <tr>
-                <td rowspan="2">{{ l10n("cpu.x64", "commons", user_lang) }}</td>
-                <td>{{ l10n("requirements.text.dotnet", project_id, user_lang) }}</td>
-                <td>...</td>
-            </tr>
-            <tr>
-                <td>{{ l10n("none.fs", "commons", user_lang) }}</td>
-                <td>...</td>
-            </tr>
-            <tr>
-                <td rowspan="2">{{ l10n("cpu.x86", "commons", user_lang) }}</td>
-                <td>{{ l10n("requirements.text.dotnet", project_id, user_lang) }}</td>
-                <td>...</td>
-            </tr>
-            <tr>
-                <td>{{ l10n("none.fs", "commons", user_lang) }}</td>
-                <td>...</td>
-            </tr>
-            <tr>
-                <td rowspan="2">{{ l10n("cpu.arm64", "commons", user_lang) }}</td>
-                <td>{{ l10n("requirements.text.dotnet", project_id, user_lang) }}</td>
-                <td>...</td>
-            </tr>
-            <tr>
-                <td>{{ l10n("none.fs", "commons", user_lang) }}</td>
-                <td>...</td>
-            </tr>
-            <tr>
-                <td rowspan="2">{{ l10n("cpu.arm32", "commons", user_lang) }}</td>
-                <td>{{ l10n("requirements.text.dotnet", project_id, user_lang) }}</td>
-                <td>...</td>
-            </tr>
-            <tr>
-                <td>{{ l10n("none.fs", "commons", user_lang) }}</td>
-                <td>...</td>
-            </tr>
-        </tbody>
-    </table>
+    <section>
+        {{ render_h2(l10n("version.current", "commons", user_lang)) }}
+        <div class="content-spacer">
+            <table class="table-stylish table-p-s border r-l">
+                <thead>
+                    <tr>
+                        <th>{{ l10n("cpu.architecture", "commons", user_lang) }}</th>
+                        <th>{{ l10n("requirements", "commons", user_lang) }}</th>
+                        <th>{{ l10n("download.multiple", "commons", user_lang) }}</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>{{ l10n("cpu.any", "commons", user_lang) }}</td>
+                        <td>{{ l10n("requirements.text.dotnet", project_id, user_lang) }}</td>
+                        <td>...</td>
+                    </tr>
+                    <tr>
+                        <td rowspan="2">{{ l10n("cpu.x64", "commons", user_lang) }}</td>
+                        <td>{{ l10n("requirements.text.dotnet", project_id, user_lang) }}</td>
+                        <td>...</td>
+                    </tr>
+                    <tr>
+                        <td>{{ l10n("none.fs", "commons", user_lang) }}</td>
+                        <td>...</td>
+                    </tr>
+                    <tr>
+                        <td rowspan="2">{{ l10n("cpu.x86", "commons", user_lang) }}</td>
+                        <td>{{ l10n("requirements.text.dotnet", project_id, user_lang) }}</td>
+                        <td>...</td>
+                    </tr>
+                    <tr>
+                        <td>{{ l10n("none.fs", "commons", user_lang) }}</td>
+                        <td>...</td>
+                    </tr>
+                    <tr>
+                        <td rowspan="2">{{ l10n("cpu.arm64", "commons", user_lang) }}</td>
+                        <td>{{ l10n("requirements.text.dotnet", project_id, user_lang) }}</td>
+                        <td>...</td>
+                    </tr>
+                    <tr>
+                        <td>{{ l10n("none.fs", "commons", user_lang) }}</td>
+                        <td>...</td>
+                    </tr>
+                    <tr>
+                        <td rowspan="2">{{ l10n("cpu.arm32", "commons", user_lang) }}</td>
+                        <td>{{ l10n("requirements.text.dotnet", project_id, user_lang) }}</td>
+                        <td>...</td>
+                    </tr>
+                    <tr>
+                        <td>{{ l10n("none.fs", "commons", user_lang) }}</td>
+                        <td>...</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </section>
 
-    {{ render_h2(l10n("source.code", "commons", user_lang)) }}
-    <table class="table-stylish table-p-s border r-l">
-        <thead>
-            <tr>
-                <th>{{ l10n("version", "commons", user_lang) }}</th>
-                <th>{{ l10n("download.multiple", "commons", user_lang) }}</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>v3.0.0</td>
-                <td>...</td>
-            </tr>
-        </tbody>
-    </table>
+    <section>
+        {{ render_h2(l10n("source.code", "commons", user_lang)) }}
+        <div class="content-spacer">
+            <table class="table-stylish table-p-s border r-l">
+                <thead>
+                    <tr>
+                        <th>{{ l10n("version", "commons", user_lang) }}</th>
+                        <th>{{ l10n("download.multiple", "commons", user_lang) }}</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>v3.0.0</td>
+                        <td>...</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </section>
 
-    {{ render_h2(l10n("links.title", project_id, user_lang)) }}
-    {{ render_list_ul([
-        "<a href='https://github.com/aziascreations/DotNet-ListComPort'>" +
-        l10n("github", "commons", user_lang) +
-        "</a>",
-    ]) }}
+    <section>
+        {{ render_h2(l10n("links.title", project_id, user_lang)) }}
+        <div class="content-spacer">
+            {{ render_list_ul([
+                "<a href='https://github.com/aziascreations/DotNet-ListComPort'>" +
+                l10n("github", "commons", user_lang) +
+                "</a>",
+            ]) }}
+        </div>
+    </section>
 
 {% endblock %}
