--- a/templates/pages/tools_index.jinja
+++ b/templates/pages/tools_index.jinja
@@ -14,20 +14,20 @@
 
 {% block content_listing %}
 
-    {% for tool_id, tool_data in get_tools().items() %}
+    {% for tool_data in get_sorted_tools_by_tags(requested_tags) %}
         <hr class="subtle">
 
         <!--<div class="p-s border r-m">-->
         <div class="p-xs r-m">
-            <a href="{{ l10n_url_abs('/tools/' + tool_id, raw_lang) }}" class="a-hidden">
+            <a href="{{ l10n_url_abs('/tools/' + tool_data.id, raw_lang) }}" class="a-hidden">
                 <div class="content-search-entry">
                     <img class="content-search-image mr-s r-l"
                          src="{{ url_for("static", filename=tool_data.metadata.index.image_url) }}"
                          alt="TODO">
                     <h3 class="mb-xs">
-                        {{ l10n(tool_data.metadata.index.title_key, tool_id, user_lang) }}
+                        {{ l10n(tool_data.metadata.index.title_key, tool_data.id, user_lang) }}
                     </h3>
-                    <p>{{ l10n(tool_data.metadata.index.preamble_key, tool_id, user_lang) }}</p>
+                    <p>{{ l10n(tool_data.metadata.index.preamble_key, tool_data.id, user_lang) }}</p>
                 </div>
             </a>
 
