Fixed missing translations on surrounding DOM Update base_www.jinja and _project.jinja

--- a/templates/base_www.jinja
+++ b/templates/base_www.jinja
@@ -44,20 +44,20 @@
 	<details id="lang-selector" class="border p-mxs px-s bkgd-blank-dark r-m">
         <summary>
             <i class="fad fa-language"></i>
-            <span class="mobile-hide t-w-500">&nbsp;{{ l10n("menu.title", "langs", lang) }}</span>
+            <span class="mobile-hide t-w-500">&nbsp;{{ l10n("menu.title", "langs", user_lang) }}</span>
             &nbsp;<i class="fa fa-angle-down"></i>
         </summary>
 
         <div class="p-xs border bkgd-surround r-m t-w-500">
             <a href="{{ l10n_url_switch(request_path, "en") }}" class="a-hidden">
-                <p class="mb-s px-xxs">{{ l10n("english", "langs", lang) }}</p>
+                <p class="mb-s px-xxs">{{ l10n("english", "langs", user_lang) }}</p>
             </a>
             <a href="{{ l10n_url_switch(request_path, "fr") }}" class="a-hidden">
-                <p class="my-s px-xxs">{{ l10n("french", "langs", lang) }}</p>
+                <p class="my-s px-xxs">{{ l10n("french", "langs", user_lang) }}</p>
             </a>
             <hr class="subtle m-0">
             <a href="{{ l10n_url_switch(request_path) }}" class="a-hidden">
-                <p class="mt-xs px-xxs">{{ l10n("automatic", "langs", lang) }}</p>
+                <p class="mt-xs px-xxs">{{ l10n("automatic", "langs", user_lang) }}</p>
             </a>
         </div>
     </details>
@@ -67,7 +67,7 @@
 	<a href="{{ l10n_url_abs('/', raw_lang) }}" class="no-select">
 		<img class="logo-sidebar-v2"
 		     src="https://cdn.nibblepoker.{{ domain_tld }}/NibblePoker/Logos/v2_full_shaded_optimized.svg"
-		     alt="{{ l10n("logo.alt", "sidebar", lang) }}"
+		     alt="{{ l10n("logo.alt", "sidebar", user_lang) }}"
 		     draggable="false">
 	</a>
     <div class="p-xs"></div>
@@ -82,7 +82,7 @@
             >
                 <p class="t-size-18 t-w-500 py-xs sidebar-entry">
                     <i class="{{ sidebar_entry.icon }} pr-xs t-size-12 t-half-muted"></i>
-                    <span class="t-size-12">{{ l10n(sidebar_entry.title_key, "sidebar", lang) }}</span>
+                    <span class="t-size-12">{{ l10n(sidebar_entry.title_key, "sidebar", user_lang) }}</span>
                     {% if sidebar_entry.has_new() %}
                         <i class="fa-duotone fa-solid fa-sparkles ml-auto t-size-11 t-muted"></i>
                     {% endif %}
@@ -99,18 +99,19 @@
 </main>
 
 <footer class="d-flex flex-align-center w-full p-s py-xs">
-	<button id="sidebar-toggle-footer" class="p-xs border r-s t-size-10" aria-label="{{ l10n("alt.sidebar.button", "footer", lang) }}">
+	<button id="sidebar-toggle-footer" class="p-xs border r-s t-size-10"
+            aria-label="{{ l10n("alt.sidebar.button", "footer", user_lang) }}">
 		<i class="fa fa-bars px-xxs" aria-hidden="true"></i>
 	</button>
 	<p class="flex-fill t-center t-size-10 t-w-500 t-muted">
 		<a class="a-hidden" href="{{ l10n_url_abs('/privacy/', raw_lang) }}">
-            {{ l10n("text.privacy", "footer", lang) }}
+            {{ l10n("text.privacy", "footer", user_lang) }}
 		</a>
 	</p>
 	<a href="{{ l10n_url_abs('/', raw_lang) }}">
 		<img id="logo-footer"
              src="https://cdn.nibblepoker.{{ domain_tld }}/NibblePoker/Logos/v2_full_unshaded_original.svg"
-		     alt="{{ l10n("alt.logo", "footer", lang) }}" draggable="false">
+		     alt="{{ l10n("alt.logo", "footer", user_lang) }}" draggable="false">
 	</a>
 </footer>
 
