--- a/templates/projects/_project.jinja
+++ b/templates/projects/_project.jinja
@@ -37,6 +37,7 @@
     <script src="https://cdn.nibblepoker.lu/SplideJS/4.1.3/js/splide.min.js"></script>
     <script src="https://cdn.nibblepoker.lu/HighlightJS/11.9.0-custom/highlight.min.js"></script>
 
+    <script src="{{ url_for("static", filename="resources/NibblePoker/js/nibblepoker-default.min.js") }}"></script>
     <script src="{{ url_for("static", filename="/resources/NibblePoker/js/nibblepoker-splide.min.js") }}"></script>
     <script src="{{ url_for("static", filename="/resources/NibblePoker/js/nibblepoker-code.min.js") }}"></script>
 {% endblock %}
