--- a/templates/pages/privacy.jinja
+++ b/templates/pages/privacy.jinja
@@ -76,18 +76,7 @@
     <section>
         {{ render_h1(l10n("v2.third.title", "privacy", user_lang), "fad fa-handshake") }}
         <div class="content-spacer">
-            {{ render_paragraph(l10n("v2.third.intro.1", "privacy", user_lang) +
-                '<br>' + l10n("v2.third.intro.2", "privacy", user_lang)) }}
-            {{ render_paragraph(l10n("v2.third.intro.3", "privacy", user_lang)) }}
-            {{ render_paragraph(l10n('v2.third.intro.4', "privacy", user_lang) +
-                '<br><i class="fad fa-globe ml-s t-size-8 mr-xs"></i>IONOS' +
-                '<a class="ml-s" href="https://www.ionos.fr/terms-gtc/clause-de-confidentialite/">' +
-                l10n('french', "langs", user_lang) + '</a>' +
-                '<a class="ml-s" href="https://www.ionos.com/terms-gtc/privacy-policy/">' +
-                l10n('english', "langs", user_lang) + '</a>' +
-                '<br><i class="fad fa-globe ml-s t-size-8 mr-xs"></i>ChicagoVPS' +
-                '<a class="ml-s" href="https://www.chicagovps.net/wp-content/uploads/2023/07/Terms-and-Conditions-ChicagoVPS.pdf">' +
-                l10n('english', "langs", user_lang) + '</a>') }}
+            {{ render_paragraph(l10n("v3.third.intro.1", "privacy", user_lang)) }}
         </div>
     </section>
 
@@ -105,18 +94,18 @@
         <div class="content-spacer">
             {{ render_paragraph(l10n("v2.update.intro.1", "privacy", user_lang)) }}
             {{ render_paragraph('<i class="fad fa-calendar-alt mr-xs"></i>' + l10n("v2.update.history.1.date", "privacy", user_lang) +
-                '<span class="ml-l"><i class="fad fa-globe t-size-8 mr-xxs"></i><a href="/privacy/privacy_2021-12-04_en.txt">' +
+                '<span class="ml-l"><i class="fad fa-globe t-size-8 mr-xxs"></i><a href="/resources/NibblePoker/privacy/privacy_2021-12-04_en.txt">' +
                 l10n('english', "langs", user_lang) + '</a></span>' +
-                '<span class="ml-l"><i class="fad fa-globe t-size-8 mr-xxs"></i><a href="/privacy/privacy_2021-12-04_fr.txt">' +
+                '<span class="ml-l"><i class="fad fa-globe t-size-8 mr-xxs"></i><a href="/resources/NibblePoker/privacy/privacy_2021-12-04_fr.txt">' +
                 l10n('french', "langs", user_lang) + '</a></span>' )}}
             {{ render_list_ul([
                 l10n('v2.update.history.1.desc.1', "privacy", user_lang)
             ]) }}
 
             {{ render_paragraph('<i class="fad fa-calendar-alt mr-xs"></i>' + l10n("v2.update.history.2.date", "privacy", user_lang) +
-                '<span class="ml-l"><i class="fad fa-globe t-size-8 mr-xxs"></i><a href="/privacy/privacy_2022-03-18_en.txt">' +
+                '<span class="ml-l"><i class="fad fa-globe t-size-8 mr-xxs"></i><a href="/resources/NibblePoker/privacy/privacy_2022-03-18_en.txt">' +
                 l10n('english', "langs", user_lang) + '</a></span>' +
-                '<span class="ml-l"><i class="fad fa-globe t-size-8 mr-xxs"></i><a href="/privacy/privacy_2022-03-18_fr.txt">' +
+                '<span class="ml-l"><i class="fad fa-globe t-size-8 mr-xxs"></i><a href="/resources/NibblePoker/privacy/privacy_2022-03-18_fr.txt">' +
                 l10n('french', "langs", user_lang) + '</a></span>' )}}
             {{ render_list_ul([
                 l10n('v2.update.history.2.desc.1', "privacy", user_lang),
@@ -125,9 +114,9 @@
             ]) }}
 
             {{ render_paragraph('<i class="fad fa-calendar-alt mr-xs"></i>' + l10n("v2.update.history.3.date", "privacy", user_lang) +
-                '<span class="ml-l"><i class="fad fa-globe t-size-8 mr-xxs"></i><a href="/privacy/privacy_2022-09-09_en.txt">' +
+                '<span class="ml-l"><i class="fad fa-globe t-size-8 mr-xxs"></i><a href="/resources/NibblePoker/privacy/privacy_2022-09-09_en.txt">' +
                 l10n('english', "langs", user_lang) + '</a></span>' +
-                '<span class="ml-l"><i class="fad fa-globe t-size-8 mr-xxs"></i><a href="/privacy/privacy_2022-09-09_fr.txt">' +
+                '<span class="ml-l"><i class="fad fa-globe t-size-8 mr-xxs"></i><a href="/resources/NibblePoker/privacy/privacy_2022-09-09_fr.txt">' +
                 l10n('french', "langs", user_lang) + '</a></span>' )}}
             {{ render_list_ul([
                 l10n('v2.update.history.3.desc.1', "privacy", user_lang),
@@ -137,9 +126,9 @@
             ]) }}
 
             {{ render_paragraph('<i class="fad fa-calendar-alt mr-xs"></i>' + l10n("v2.update.history.4.date", "privacy", user_lang) +
-                '<span class="ml-l"><i class="fad fa-globe t-size-8 mr-xxs"></i><a href="/privacy/privacy_2023-11-11_en.txt">' +
+                '<span class="ml-l"><i class="fad fa-globe t-size-8 mr-xxs"></i><a href="/resources/NibblePoker/privacy/privacy_2023-11-11_en.txt">' +
                 l10n('english', "langs", user_lang) + '</a></span>' +
-                '<span class="ml-l"><i class="fad fa-globe t-size-8 mr-xxs"></i><a href="/privacy/privacy_2023-11-11_fr.txt">' +
+                '<span class="ml-l"><i class="fad fa-globe t-size-8 mr-xxs"></i><a href="/resources/NibblePoker/privacy/privacy_2023-11-11_fr.txt">' +
                 l10n('french', "langs", user_lang) + '</a></span>' )}}
             {{ render_list_ul([
                 l10n('v2.update.history.4.desc.1', "privacy", user_lang),
@@ -148,13 +137,23 @@
             ]) }}
 
             {{ render_paragraph('<i class="fad fa-calendar-alt mr-xs"></i>' + l10n("v2.update.history.5.date", "privacy", user_lang) +
-                '<span class="ml-l"><i class="fad fa-globe t-size-8 mr-xxs"></i><a href="/privacy/privacy_2023-11-30_en.txt">' +
+                '<span class="ml-l"><i class="fad fa-globe t-size-8 mr-xxs"></i><a href="/resources/NibblePoker/privacy/privacy_2023-11-30_en.txt">' +
                 l10n('english', "langs", user_lang) + '</a></span>' +
-                '<span class="ml-l"><i class="fad fa-globe t-size-8 mr-xxs"></i><a href="/privacy/privacy_2023-11-30_fr.txt">' +
+                '<span class="ml-l"><i class="fad fa-globe t-size-8 mr-xxs"></i><a href="/resources/NibblePoker/privacy/privacy_2023-11-30_fr.txt">' +
                 l10n('french', "langs", user_lang) + '</a></span>' )}}
             {{ render_list_ul([
                 l10n('v2.update.history.5.desc.1', "privacy", user_lang),
                 l10n('v2.update.history.5.desc.2', "privacy", user_lang)
+            ]) }}
+
+            {{ render_paragraph('<i class="fad fa-calendar-alt mr-xs"></i>' + l10n("v2.update.history.6.date", "privacy", user_lang) +
+                '<span class="ml-l"><i class="fad fa-globe t-size-8 mr-xxs"></i><a href="/resources/NibblePoker/privacy/privacy_2025-03-30_en.txt">' +
+                l10n('english', "langs", user_lang) + '</a></span>' +
+                '<span class="ml-l"><i class="fad fa-globe t-size-8 mr-xxs"></i><a href="/resources/NibblePoker/privacy/privacy_2025-03-30_fr.txt">' +
+                l10n('french', "langs", user_lang) + '</a></span>' )}}
+            {{ render_list_ul([
+                l10n('v2.update.history.6.desc.1', "privacy", user_lang),
+                l10n('v2.update.history.6.desc.2', "privacy", user_lang)
             ]) }}
 
             {{ render_paragraph(l10n("v2.update.end.2", "privacy", user_lang)) }}
