--- a/templates/pages/root.jinja
+++ b/templates/pages/root.jinja
@@ -20,6 +20,13 @@
 
     {{ render_h2(l10n("updates.title", "home", user_lang)) }}
 
+    <p><i class="fad fa-calendar-alt mr-xs mt-s"></i>{{ l10n("updates.5.date", "home", user_lang) }}</p>
+    {{ render_list_ul([
+        l10n("updates.5.text.1", "home", user_lang),
+        l10n("updates.5.text.2", "home", user_lang),
+        l10n("updates.text.privacy", "home", user_lang)
+    ]) }}
+
     <p><i class="fad fa-calendar-alt mr-xs mt-s"></i>{{ l10n("updates.4.date", "home", user_lang) }}</p>
     {{ render_list_ul([
         l10n("updates.4.text.1", "home", user_lang),
