Added theme color meta tags Update base_standalone.jinja and base_www.jinja

--- a/templates/base_standalone.jinja
+++ b/templates/base_standalone.jinja
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width"/>
     <meta name="author" content="Herwin Bozet">
     <meta name="robots" content="index, follow">
+    <meta name="theme-color" content="#6F2F65">
 
     <!-- Note: https://css-tricks.com/probably-dont-base64-svg/ -->
     <link rel="icon"
