--- a/templates/base_www.jinja
+++ b/templates/base_www.jinja
@@ -9,6 +9,7 @@
     <meta name="robots" content="index, follow">
     <link rel="icon" type="image/svg+xml" href="/favicon.svg">
     <link rel="alternate icon" href="/favicon.ico">
+    <meta name="theme-color" content="#6F2F65">
 
     <!--<link rel="dns-prefetch" href="https://cdn.nibblepoker.lu/"/>-->
     <link rel="preconnect" href="https://cdn.nibblepoker.lu/"/>
